# crud_rust

./: .env  Cargo.toml  README.md
src/: error.rs  main.rs
src/api/: tasks.rs  users.rs
src/models/: mod.rs  response.rs  task_model.rs  user_model.rs
src/routes/: app.rs
