[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.106"
serde_with = "3.3.0"
actix-rt = "2.4"

futures = "0.3.28"

tokio = { version = "1.32.0", features = ["full"] }

diesel = { version = "2.1.1", features = ["chrono", "extras", "bigdecimal"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
deadpool = "0.9.5"
deadpool-postgres = "0.10.5"

